DEV updates:
v0.0.1b - v0.0.3b
- Added /start command
- Copied maze generation algorithm from https://github.com/xsafter/map-generator
- Implemented player & exit generation
v0.0.4b
- Implemented interface
v0.0.5b
- Implemented movement
- Remade saves system: user cannot have several saves
v0.0.6b
- Old maze pictures are getting deleted after player presses a button
Release:

Post-Release updates: